fixed width issue on services page when on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -261,7 +261,7 @@
 }
 
 .serviceDiv > img {
- width: 300px;
+ width: 250px;
  margin: 20px;
 }
 
